use different inner wrap class to prevent issues with WC Admin styles.

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -848,7 +848,8 @@ table.wc-gzd-shipping-providers {
     }
 
     .form-row {
-      .wrap {
+      .input-inner-wrap {
+        clear: left;
         margin: 0;
         display: flex;
         flex-wrap: nowrap;
